--- a/app/src/main/res/layout/fragment_zametki.xml
+++ b/app/src/main/res/layout/fragment_zametki.xml
@@ -2,7 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/fon">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
+
+
+    </LinearLayout>
+
+    <Button
+        android:id="@+id/button_p"
+        android:layout_width="wrap_content"
+        android:layout_height="58dp"
+        android:layout_gravity="end"
+        android:text="@string/text_button" />
 
 </LinearLayout>
