--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,10 +7,20 @@
     tools:context=".MainActivity"
     android:orientation="horizontal">
 
+
+    <Button
+        android:id="@+id/button_p"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_gravity="bottom"
+        android:text="@string/text_button" />
+
+
     <FrameLayout
         android:id="@+id/zametki_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
+
 
 
 </LinearLayout>
