--- a/app/src/main/res/layout/fragment_zametki.xml
+++ b/app/src/main/res/layout/fragment_zametki.xml
@@ -8,16 +8,16 @@
 
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"/>
 
 
-    </LinearLayout>
+<!--    </LinearLayout>-->
 
-    <Button
-        android:id="@+id/button_p"
-        android:layout_width="wrap_content"
-        android:layout_height="58dp"
-        android:layout_gravity="end"
-        android:text="@string/text_button" />
+<!--    <Button-->
+<!--        android:id="@+id/button_p"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="58dp"-->
+<!--        android:layout_gravity="end"-->
+<!--        android:text="@string/text_button" />-->
 
 </LinearLayout>
